--- a/frontend/pages/auth/admin-login.html
+++ b/frontend/pages/auth/admin-login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login - BetterLife</title>
-    <link rel="stylesheet" href="public/assets/css/main.css">
-    <link rel="stylesheet" href="public/assets/css/components.css">
-    <link rel="stylesheet" href="public/assets/css/responsive.css">
+    <link rel="stylesheet" href="../../public/assets/css/main.css">
+    <link rel="stylesheet" href="../../public/assets/css/components.css">
+    <link rel="stylesheet" href="../../public/assets/css/responsive.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body class="auth-page admin-login">
@@ -43,7 +43,7 @@
                 <a href="login.html" class="back-link">
                     <i class="fas fa-arrow-left"></i> Login sebagai User
                 </a>
-                <a href="../index.html" class="back-link">
+                <a href="../../index.html" class="back-link">
                     <i class="fas fa-home"></i> Kembali ke Beranda
                 </a>
             </div>
