--- a/frontend/pages/auth/register.html
+++ b/frontend/pages/auth/register.html
@@ -6,9 +6,9 @@
     <title>Register - BetterLife</title>
 
     <!-- FIXED ABSOLUTE PATH -->
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/css/components.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="stylesheet" href="../../public/assets/css/main.css">
+    <link rel="stylesheet" href="../../public/assets/css/components.css">
+    <link rel="stylesheet" href="../../public/assets/css/responsive.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -52,7 +52,7 @@
                 <a href="login.html" class="back-link">
                     <i class="fas fa-arrow-left"></i> Sudah punya akun? Masuk
                 </a>
-                <a href="../index.html" class="back-link">
+                <a href="../../index.html" class="back-link">
                     <i class="fas fa-home"></i> Kembali ke Beranda
                 </a>
             </div>
