--- a/frontend/pages/user/profile.html
+++ b/frontend/pages/user/profile.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil - BetterLife</title>
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../assets/css/components.css">
-    <link rel="stylesheet" href="../assets/css/responsive.css">
+    <link rel="stylesheet" href="../../public/assets/css/main.css">
+    <link rel="stylesheet" href="../../public/assets/css/components.css">
+    <link rel="stylesheet" href="../../public/assets/css/responsive.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="../index.html" style="text-decoration: none; color: inherit;">
+                <a href="../../index.html" style="text-decoration: none; color: inherit;">
                     <i class="fas fa-heart"></i>
                     BetterLife
                 </a>
             </div>
             <div class="nav-menu">
-                <a href="dashboard.html" class="nav-link">Dashboard</a>
+                <a href="./dashboard.html" class="nav-link">Dashboard</a>
                 <a href="../cbt/cbt.html" class="nav-link">CBT</a>
                 <a href="../meditation/meditasi.html" class="nav-link">Meditasi</a>
                 <a href="../education/edukasi.html" class="nav-link">Edukasi</a>
