--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,6 @@
                 <div class="nav-buttons">
                     <a href="pages/auth/login.html" class="btn btn-outline">Masuk</a>
                     <a href="pages/auth/register.html" class="btn btn-primary">Daftar</a>
-                    <a href="pages/auth/admin-login.html" class="btn btn-secondary">Admin</a>
                 </div>
             </div>
         </div>
@@ -72,6 +71,6 @@
         </div>
     </section>
 
-    <script src="/assets/js/main.js"></script>
+    <script src="./public/assets/js/main.js"></script>
 </body>
 </html>
